=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* Support for tracing/monitoring https://learn.microsoft.com/en-us/azure/azure-functions/[Azure Functions].
  See the <<azure-functions>> document.
  ({pull}3071[#3071], https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-azure-functions.md[spec])

[float]
===== Bug fixes

* Fix instrumentation of `http.request()` and `http.get()` (and the same
  for `https.`) so that Basic auth fields are not lost. Before this change
  if the first arg was a URL or string with `username` and/or `password`
  values, e.g. `https://user:pass@...`, then the auth fields were not
  included in the actual HTTP request.  ({issues}2044[#2044])

* Fix `span.context.destination.service.resource` for S3 spans to have an
  "s3/" prefix.
+
*Note*: While this is considered a bugfix, but it can potentially be a breaking
change in the Kibana APM app: It can break the history of the S3-Spans / metrics
for users relying on `context.destination.service.resource`. If users happen to
run agents both with and without this fix (for same or different languages), the
same S3-buckets can appear twice in the service map (with and without
s3-prefix).

* Ensure collected dropped spans stats follow the intake API type requirements.
  Before this change `transaction.dropped_spans_stats[*].duration.sum.us` could
  have been a floating-point value, but the intake API requires an int. The
  result was dropped transactions and errors in the agent log.
  ({issues}3104[#3104])

[float]
===== Chores

* Add `service.agent.activation_method` metadatum.
  Spec: https://github.com/elastic/apm/blob/main/specs/agents/metadata.md#activation-method
  ({issues}3039[#3039])


[[release-notes-3.41.1]]
==== 3.41.1 2022/12/21

[float]
===== Bug fixes

* Fix a bug in span compression with sending spans that were buffered for
  possible compression. Before this fix, in some cases a compressible span could