@@ -14,7 +14,7 @@ module.exports = function (restify, agent, { version, enabled }) {
   if (!enabled) {
     return restify
   }
-  if (!semver.satisfies(version, '>=5.2.0 <11.0.0')) {
+  if (!semver.satisfies(version, '>=5.2.0 <12.0.0')) {
     agent.logger.debug('restify version %s not supported, skipping', version)
     return restify
   }
